# StatisticalDistributions

./: .gitignore  README.md
source/: CMakeLists.txt  main.cpp
source/include/: statistics.h
source/src/: statistics.cpp
